TestCases/Errors/Haversine/observations/sst/win_12_obs.spm
obs r14-c6 0.0017650095972709
obs r15-c6 0.000407184364197444
obs r14-c7 0.00142053510469747
obs r15-c7 0.00126249703445683
obs r13-c8 1e-08
obs r14-c8 0.000247990913097874
obs r5-c10 0.0103044807871294
obs r13-c10 0.00109090909090909
obs r14-c10 0.000714097496706192
obs r14-c11 0.000364389233954451
obs r5-c12 0.00753846153846154
obs r6-c12 0.00335097001763668
obs r11-c12 0.00333333333333333
obs r5-c13 0.0178717948717949
obs r10-c13 0.00162337662337662
obs r11-c13 0.00246753246753247
obs r6-c14 0.00419753086419753
obs r6-c15 0.00320987654320988
obs r7-c17 0.0146666666666667
obs r8-c18 0.0209742375799311
obs r9-c18 0.011
obs r10-c19 0.0031330865952817
obs r11-c19 0.00551493821967609
obs r10-c20 0.00422530770356857
obs r11-c20 0.00153846153846154
error_value r14-c6 0.2
error_value r15-c6 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r13-c8 0.2
error_value r14-c8 0.2
error_value r5-c10 0.2
error_value r13-c10 0.2
error_value r14-c10 0.2
error_value r14-c11 0.2
error_value r5-c12 0.2
error_value r6-c12 0.2
error_value r11-c12 0.2
error_value r5-c13 0.2
error_value r10-c13 0.2
error_value r11-c13 0.2
error_value r6-c14 0.2
error_value r6-c15 0.2
error_value r7-c17 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
